I fix padding issue on mobile
Former-commit-id: 3b1a80e9428204fe1c67dee4c43310ee690cda27 [formerly fee65516467e663f6e0782edaac749728be836fe] [formerly a6c0ac665ffefc59bf234b8e2914f587c1f5687a [formerly 154f885ab43a30b6d1c6d1fc9f92c51af1d3d9fd]]
Former-commit-id: da4deb50cca4c4a65cc844e147591a227ac75e38 [formerly d54773f8c549207bc3b6a462cf3de11c8d34eb0d]
Former-commit-id: 61be1566b54c572454cc96bfe78b38e2240f10d4
Former-commit-id: 4d81774f7f41994366327064e6185b8d1b569ccf
Former-commit-id: e100daaaa00c4ce1ca51ac5e519c4518a63475c2

--- a/control/src/pages/LoginSignUpHelp/LoginSignUpHelp.module.css
+++ b/control/src/pages/LoginSignUpHelp/LoginSignUpHelp.module.css
@@ -10,9 +10,15 @@
   padding: 40px 60px;
 }
 
+@media screen and (min-width: 300px) and (max-width: 700px) {
+  .LoginHelpSideBar,
+  .LoginHelpMain {
+    padding: 4px 6px;
+  }
+}
 .helpLink,
 .ChelpLink {
-  font-size: 1.2rem!important;
+  font-size: 1.2rem !important;
 }
 
 /* .loginHelp p,
